add meta description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/png" href="/playing-videogame.ico" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="CrossPoint is your ultimate gaming companion — discover titles, save them to custom lists, and share reviews. The app your backlog has been waiting for."
+    />
     <title>Cross Point</title>
   </head>
   <body>
